@@ -11,7 +11,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 -------------------
 
 - Moved held_position fields 'label', 'position_type', 'start_date', 'end_date', 'usages', 'defaults', 'signature_number'
-  to a 'app_parameters' fieldset so it is displayed on the view by the 'additional-fields' macro.
+  to a 'app_parameters' fieldset so it is displayed on the view by the 'additional-fields' macro
+- Added caching on annexes categorized childs view (the icon with count of annexes initializing the tooltipster) and adapted
+  code so it is called the same way everywhere and thus the cache is correctly shared everywhere it is displayed
 
 4.1b16 (2019-01-31)
 -------------------
